# digitaltwin

./: .env.example  .gitignore  DEPLOY_PRD.md  Makefile  OBSIDIAN_PRD.md  README.md  RUN_LOCALLY.md  TEAMS_SETUP.md  WEBSITE_PRD.md  backlog.md  credentials.yaml.example  docker-compose.yml  fix_meta2.py
.github/prompts/: deploy-nas.prompt.md
backend/: .dockerignore  Dockerfile  migrate_graph.py  migrate_onedrive.py  pyproject.toml
backend/app/: __init__.py  admin.py  audio.py  auth.py  chat.py  config.py  documents.py  image_indexer.py  indexer.py  knowledge.py  logging_.py  main.py  notify.py  rag.py  session.py  teams_webhook.py  telegram_bot.py  translations.py  vault_sync.py
backend/app/embedders/: __init__.py  base.py  local_.py  openai_.py
backend/app/providers/: __init__.py  anthropic_.py  base.py  ollama_.py  openai_.py
backend/tests/: conftest.py  test_auth.py  test_chat.py  test_rag.py
chroma_db_v2/: chroma.sqlite3
data_v2/: knowledge.db  knowledge.db-shm  knowledge.db-wal
frontend/: Dockerfile  index.html  nginx.conf  package-lock.json  package.json  tailwind.config.js  tsconfig.json  vite.config.ts
frontend/concepts/: concept-a-prompt.html  concept-b-constellation.html  concept-c-terminal.html  concept-d-mindscape.html  concept-d2-mindscape.html  concept-d3-mindscape.html  (+11 more)
raw_input_data_v2/: 1slider_sebastiaan.pptx
scripts/: export_vault.py  nas_first_deploy.sh  restructure_vault.py  seed_notebook_structure.py  sync_vault.py  unseed_notebook_structure.py
tests/: eval_ragas.py  golden_qa.yaml  show_results.py  test_golden.py
(+76 files in other folders)
